--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,15 @@
 {
   "extends": ["standard", "standard-react"],
-  "parser": "babel-eslint"
+  "parser": "babel-eslint",
+  "env": {
+    "browser": true,
+    "node": true,
+    "es6": true
+  },
+  "rules": {
+    "semi": [2, "always"],
+    "quotes": 0,
+    "jsx-quotes": 0
+  },
+  "plugins": ["eslint-plugin-react"]
 }
