Start with an empty component

--- a/.eslintrc
+++ b/.eslintrc
@@ -9,7 +9,8 @@
   "rules": {
     "semi": [2, "always"],
     "quotes": 0,
-    "jsx-quotes": 0
+    "jsx-quotes": 0,
+    "space-before-function-paren": 0
   },
   "plugins": ["eslint-plugin-react"]
 }
