Created the password state variable - passed it as a property to StrengthMeter component

--- a/.eslintrc
+++ b/.eslintrc
@@ -10,7 +10,8 @@
     "semi": [2, "always"],
     "quotes": 0,
     "jsx-quotes": 0,
-    "space-before-function-paren": 0
+    "space-before-function-paren": 0,
+    "react/prop-types": 0
   },
   "plugins": ["eslint-plugin-react"]
 }
