--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "babel-loader": "^5.2.2",
     "babel-runtime": "^5.6.15",
     "bootstrap": "^3.3.5",
+    "classnames": "^2.1.3",
     "css-loader": "^0.15.1",
     "debug": "^2.2.0",
     "extract-text-webpack-plugin": "^0.8.2",
